tests/semantic_analysis/error/global_variable_redefine.c
global_variable_redefine\.c:2:5: error:.*